--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -15,6 +15,7 @@
                 {% endif %}
             </div>
             <h2 class="article-title">{{ object.title }}</h2>
+            <img width="500" height="300" src="{{ object.image.url }}">
             <p class="article-content">{{ object.content }}</p>
         </div>
     </article>
